--- a/client/angular.json
+++ b/client/angular.json
@@ -29,7 +29,8 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss"],
+            "styles": ["src/styles.scss",
+              "node_modules/font-awesome/css/font-awesome.css"],
             "scripts": [],
             "allowedCommonJsDependencies": ["tsparticles"]
           },
