--- a/client/package.json
+++ b/client/package.json
@@ -26,8 +26,8 @@
     "@angular/router": "~12.0.3",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@ngneat/tailwind": "^7.0.3",
-    "@types/facebook-js-sdk": "^14.0",
     "angularx-social-login": "^4.1.0",
+    "font-awesome": "^4.7.0",
     "ng-particles": "^2.7.3",
     "ngx-skeleton-loader": "^2.10.0",
     "rxjs": "~6.6.0",
