--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -3,7 +3,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": ["facebook-js-sdk"]
+   // "types": ["facebook-js-sdk"]
   },
   "files": [
     "src/main.ts",
