--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "angularx-social-login": "^4.1.0",
     "font-awesome": "^4.7.0",
     "ng-particles": "^2.7.3",
+    "ngx-facebook": "^3.0.0-0",
     "ngx-skeleton-loader": "^2.10.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.4.17",
