--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.1",
     "express": "~4.16.1",
     "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
@@ -19,11 +20,15 @@
     "mongoose": "^5.13.14",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
+    "node-libcurl": "^2.3.4",
+    "nodemailer": "^6.7.7",
     "passport": "^0.4.1",
     "passport-facebook-token": "^4.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.3.0",
-    "session-file-store": "^1.5.0"
+    "pdfkit": "^0.13.0",
+    "session-file-store": "^1.5.0",
+    "xhr2": "^0.2.1"
   }
 }
