--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^16.0.1",
     "express": "~4.16.1",
     "express-session": "^1.17.3",
+    "fedex": "^0.0.1",
+    "fedex-nodejs": "^1.1.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
@@ -21,6 +23,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
     "node-libcurl": "^2.3.4",
+    "node-shipping-fedex": "^1.0.0",
     "nodemailer": "^6.7.7",
     "passport": "^0.4.1",
     "passport-facebook-token": "^4.0.0",
