--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "fedex": "^0.0.1",
     "fedex-nodejs": "^1.1.0",
     "http-errors": "~1.6.3",
+    "https": "^1.0.0",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.9",
